--- a/sampleApp/local.properties
+++ b/sampleApp/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 08 12:35:31 PDT 2015
-sdk.dir=/opt/android_sdk
+#Wed Jul 08 13:22:24 PDT 2015
+sdk.dir=/Users/gaoy/Library/Android/sdk
