--- a/sampleApp/local.properties
+++ b/sampleApp/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jul 08 13:22:24 PDT 2015
-sdk.dir=/Users/gaoy/Library/Android/sdk
+sdk.dir=/opt/android_sdk
